--- a/_posts/2021-01-12-0111-0117.md
+++ b/_posts/2021-01-12-0111-0117.md
@@ -131,3 +131,38 @@ if (emailCnt > 0) {
 * API를 작성하는데 기본이 되는 연동규격 정의서를 작성하고, 그에 맞게 API를 개발하였다.
 * 직접 돌아가는 코드를 확인하고, 테스트를 시도하여 회원의 기본적인 CRUD를 할 수 있도록 설계 및 개발하였다.
 * 로그인 시 쿠키를 생성할 때, 'UTF-8'형식으로 인코딩하여 디코딩 시 예상한 결과가 출력되도록 코딩하였다.
+
+## 0115
+## java.math.BigInteger클래스
+* 정수형으로 표현할 수 있는 값의 한계가 있으므로, 더 큰 값을 다뤄야할 때 사용하면 좋은것이 BigInteger이다.
+* 내부적으로 int배열을 사용해서 값을 다뤄서 long타입보다 훨씬 큰 값을 다룰 수 있다. 대신 성능은 long타입보다 떨어진다.
+
+### BIgInteger생성
+*생성하는 방법은 여러 가지가 있는데, 문자열로 숫자를 표현하는 것이 일반적이다. 정수형 리터럴로는 표혈할 수 있는 값의 한계가 있기 때문이다.*
+```java
+BigInteger val = new BigInteger("12345678901234567890");	//문자열로 생성
+BigInteger val = new BigInteger("FFFF", 16);	//n진수 문자열로 생성
+BigInteger val = BigInteger.valueOf(1234567890L);	//숫자로 생성
+```
+
+### 다른 타입으로의 변환
+```java
+String toString()		//	문자열로 변환
+String toString(int radix)	// 지정된 진법의 문자열로 변환
+byte[] toByteArray()	// byte배열로 변환
+```
+
+### BigInteger의 연산
+*BigInteger에는 정수형에 사용할 수 있는 모든 연산자와 수학적인 계산을 쉽게 해주는 메서드들이 정의되어 있다.*
+```java
+BigInteger add(BigInteger val)			// 덧셈(this + val)
+BigInteger subtract(BigInteger val)		// 뺄셈(this - val)
+BigInteger multiply(BigInteger val)		// 곱셈(this * val)
+BigInteger divide(BigInteger val)		// 나눗셈(this / val)
+BigInteger remainder(BigInteger val)	// 나머지(this % val)
+```
+	*  BigInteger는 불변이므로, 반환타입이 BigInteger이란 얘기는 새로운 인스턴스가 반환된다는 뜻
+
+### 비트 연산 메서드
+* 워낙 큰 숫자를 다루기 위한 클래스이므로, 성능을 향상시키기 위해 비트단위로 연산을 수행하는 메서드들을 많이 가지고 있다.
+* 예를 들어 짝수는 제일 오른쪽 비트가 0일 것이므로, testBit(0)으로 마지막 비트를 확인하는 것이 더 효율적이다.
