--- a/_posts/2021-01-12-0111-0117.md
+++ b/_posts/2021-01-12-0111-0117.md
@@ -141,15 +141,15 @@ if (emailCnt > 0) {
 *생성하는 방법은 여러 가지가 있는데, 문자열로 숫자를 표현하는 것이 일반적이다. 정수형 리터럴로는 표혈할 수 있는 값의 한계가 있기 때문이다.*
 ```java
 BigInteger val = new BigInteger("12345678901234567890");	//문자열로 생성
-BigInteger val = new BigInteger("FFFF", 16);	//n진수 문자열로 생성
-BigInteger val = BigInteger.valueOf(1234567890L);	//숫자로 생성
+BigInteger val = new BigInteger("FFFF", 16);	                //n진수 문자열로 생성
+BigInteger val = BigInteger.valueOf(1234567890L);	        //숫자로 생성
 ```
 
 ### 다른 타입으로의 변환
 ```java
-String toString()		//	문자열로 변환
+String toString()		// 문자열로 변환
 String toString(int radix)	// 지정된 진법의 문자열로 변환
-byte[] toByteArray()	// byte배열로 변환
+byte[] toByteArray()	        // byte배열로 변환
 ```
 
 ### BigInteger의 연산
@@ -159,10 +159,34 @@ BigInteger add(BigInteger val)			// 덧셈(this + val)
 BigInteger subtract(BigInteger val)		// 뺄셈(this - val)
 BigInteger multiply(BigInteger val)		// 곱셈(this * val)
 BigInteger divide(BigInteger val)		// 나눗셈(this / val)
-BigInteger remainder(BigInteger val)	// 나머지(this % val)
+BigInteger remainder(BigInteger val)	        // 나머지(this % val)
 ```
-	*  BigInteger는 불변이므로, 반환타입이 BigInteger이란 얘기는 새로운 인스턴스가 반환된다는 뜻
+* BigInteger는 불변이므로, 반환타입이 BigInteger이란 얘기는 새로운 인스턴스가 반환된다는 뜻
 
 ### 비트 연산 메서드
 * 워낙 큰 숫자를 다루기 위한 클래스이므로, 성능을 향상시키기 위해 비트단위로 연산을 수행하는 메서드들을 많이 가지고 있다.
 * 예를 들어 짝수는 제일 오른쪽 비트가 0일 것이므로, testBit(0)으로 마지막 비트를 확인하는 것이 더 효율적이다.
+
+## 0116
+
+## java.math.BigDecimal클래스
+*BigDecimal은 실수형과 달리 정수를 이용해서 실수를 표현한다. 실수의 오차는 10진 실수를 2진 실수로 정확히 변환할 수 없는 경우가 있기 때문에 발생하는 것이므로, 실수를 정수와 10의 제곱의 곱으로 표현한다.*
+
+### BigDecimal의 생성
+*생성하는 방법은 여러 가지가 있는데, 문자열로 숫자를 표현하는 것이 일반적이다. 기본형 리터럴로는 표혈할 수 있는 값의 한계가 있기 때문이다.*
+```java
+BigDecimal val = new BigDecimal("123.4567890");	//문자열로 생성
+BigDecimal val = new BigDecimal("123.456");	// double타입의 리터럴로 생성
+BigDecimal val = new BigDecimal("123456");	// int, long타입의 리터럴로 생성가능
+BigDecimal val = BigDecimal.valueOf(123.456);	//생성자 대신 valueOf(double)사용
+BigDecimal val = BigDecimal.valueOf(123456);	//생성자 대신 valueOf(int)사용
+```
+* 주의할 점은,  double타입의 값을 매개변수로 갖는 생성자를 사용하면 오차가 발생할 수 있다는 것
+
+### 다른 타입으로의 변환
+```java
+String toPlainString()	//어떤 경우에도 다른 기호없이 숫자로만 표현
+String toString()	//필요하면 지수형태로 표현할 수도 있음
+```
+* 대부분 두 메서드 반환결과가 같지만, BigDecimal을 생성할 때 '1.0e-22'와 같은 지수형태의 리터럴을 사용했을 때 다른 결과를 얻는 경우가 있다.
+	
