--- a/_posts/2021-01-19-0118-0124.md
+++ b/_posts/2021-01-19-0118-0124.md
@@ -135,3 +135,69 @@ category: TIL
 * 서비스 이용 불가
 	* 서버가 일시적인 과부하 또는 예정된 작업으로 잠시 요청을 처리할 수 없음
 	* Retry-After 헤더 필드로 얼마뒤에 복구되는지 보낼 수도 있음
+
+## 0120
+# HTTP 헤더1 - 일반 헤더
+## HTTP 헤더
+* HTTP 전송에 필요한 모든 부가정보
+
+### 표현
+* Representation = representation Metadata + Representation Data
+* 표현 = 표현 메타데이터 + 표현 데이터
+* 메시지 본문(message body)을 통해 표현 데이터 전달
+* 메시지 본문 = 페이로드
+* 표현은 요청이나 응답에서 전달할 실제 데이터
+* 표현 헤더는 표현 데이터를 해석할 수 있는 정보 제공 
+-> 전송, 응답 둘 다 사용
+
+### Content-Type
+* 표현 데이터의 형식 설명
+* 미디어 타입, 문자 인코딩
+	* text/html; charset=utf-8
+	* application/json
+
+### Content-Encoding
+* 표현 데이터 인코딩
+* 표현 데이터를 압축하기 위해 사용
+* 데이터를 전달하는 곳에서 압축 후 인코딩 헤더 추가
+* 데이터를 읽는 쪽에서 인코딩 헤더의 정보로 압축 해제
+	* gzip
+
+### Content-Language
+* 표현 데이터의 자연 언어
+	* ko
+	* en
+
+### Content-Length
+* 표현 데이터의 길이
+* 바이트 단위
+* Transfer-Encoding을 사용하면 Content-Length를 사용하면 안됨
+
+## 협상(콘텐츠 네고시에이션)
+* 클라이언트가 선호하는 표현 요청
+* 협상 헤더는 요청시에만 사용
+* Accept: 클라이언트가 선호하는 미디어 타입 전달
+* Accept-Charset: 클라이언트가 선호하는 문자 인코딩
+* Accept-Encoding: 클라이언트가 선호하는 압축 인코딩
+* Accept-Language: 클라이언트가 선호하는 자연 언어
+
+### 협상과 우선순위
+* Quality Values(q) 값 사용
+* 0~1, 클수록 높은 우선순위, 생략 시 1
+	* Accept-Language: ko-KR,ko;q=0.9,en;q=0.8
+* 구체적인 것이 우선
+* 구체적인 것을 기준으로 미디어 타입을 맞춘다.
+
+## 전송 방식
+### 단순 전송
+* 단순히 Content-Type과 Content-Length정도만 보낸다.
+
+### 압축 전송
+* Content-Encoding을 추가하여 압축해서 보낸다.
+
+### 분할 전송
+* Transfer-Encoding: chunked
+* content-Length가 예상이 안 되기 때문에 보내면 안 된다.
+
+### 범위 전송
+* 요청 시 Range, 응답 시 Content-Range로 범위를 설정해서 보낸다.
