--- a/_posts/2021-01-19-0118-0124.md
+++ b/_posts/2021-01-19-0118-0124.md
@@ -201,3 +201,90 @@ category: TIL
 
 ### 범위 전송
 * 요청 시 Range, 응답 시 Content-Range로 범위를 설정해서 보낸다.
+
+## 0121
+# HTTP 헤더
+## 일반 정보
+### From
+* 유저 에이전트의 이메일 정보
+* 일반적으로 잘 사용되지 않음, 검색 엔진 같은 곳에서, 주로 사용
+* 요청에서 사용
+
+### Referer
+* 현재 요청된 페이지의 이전 웹 페이지 주소
+* Referer를 사용해서 유입 경로 분석 가능
+* 요청에서 사용
+
+### User-Agent
+* 유저 에이전트 애플리케이션 정보(웹 브라우저 정보 등)
+* 어떤 종류의 브라우저에서 장애가 발생하는지 파악 가능
+* 요청에서 사용
+
+### Server
+* 요청을 처리하는 ORIGIN 서버의 소프트웨어 정보
+* 응답에서 사용
+
+### Date
+* 메시지가 발생한 날짜와 시간
+* 응답에서 사용
+
+## 특별한 정보
+### Host
+* 요청한 호스트 정보(도메인)
+* 하나의 IP 주소에 여러 도메인이 적용되어 있을 때 구분하기 위해 사용
+* **필수**
+
+### Location
+* 3xx 응답 결과에 Location 헤더가 있으면, 그 위치로 자동 이동(리다이렉트)
+* 201에서는 요청에 의해 생성된 리소스 URI
+
+### Allow
+* 허용 가능한 HTTP 메서드
+* 405(Method Not Allowed)에서 응답에 포함해야함
+
+### Retry-After
+* 유저 에이전트가 다음 요청을 하기까지 기다려야 하는 시간
+* 503에러시 서비스가 언제까지 불능인지 알려줄 수 있음
+
+## 인증
+* Authorization: 클라이언트 인증 정보를 서버에 전달
+* WWW-Authenticate: 리소스 접근시 필요한 인증 방법 정의
+
+## 쿠키
+* Set-Cookie: 서버에서 클라이언트로 쿠키 전달(응답)
+* Cookie: 클라이언트가 서버에서 받은 쿠키를 저장하고, HTTP 요청시 서버로 전달
+* HTTP는 무상태 프로토콜이기 때문에 클라이언트와 서버가 서로 상태를 유지하지 않는다.
+* 쿠키 저장소에 모든 쿠키 정보들을 저장해두고 요청 시마다 모든 쿠키를 꺼내 함께 보낸다.
+* 사용자 로그인 세션관리 및 광고 정보 트래킹에 사용
+* 쿠키 정보는 서버에 항상 전송되어 네트워크 트래픽을 추가 유발하므로 최소한의 정보만 사용해야 한다.
+* 웹 브라우저  내부에 데이터를 저장하고 싶으면 웹 스토리지 사용
+
+### 쿠키 - 생명주기
+* Set-Cookie: expires
+	* 만료일이  되면 쿠키 삭제
+* Set-Cookie: max-age 
+	* 0이나 음수를 지정하면 쿠키 삭제
+	* 만료 날짜를 입력하면 해당 날짜까지 유지
+* 세션 쿠키: 만료 날짜를 생략하면 브라우저 종료시 까지만 유지
+* 영속 쿠키: 만료 날짜를 입력하면 해당 날짜까지 유지
+
+### 쿠키 - 도메인
+* domain
+* 명시하면 명시한 문서 기준 도메인 + 서브 도메인까지 포함하여 쿠키 생성
+* 생략 시 현재 문서 기준 도메인만 적용
+
+### 쿠키 - 경로
+* Path
+* 이 경로를 포함한 하위 경로 페이지만 쿠키 접근
+* 일반적으로 path=/ 루트로 지정
+
+### 쿠키 - 보안
+* Secure
+	* Secure를 적용하면 https인 경우에만 전송
+* HttpOnly
+	* XSS 공격 방지
+	* 자바스크립트에서 접근 불가
+	* HTTP 전송에만 사용
+* SameSite
+	* XSRF 공격 방지
+	* 요청 도메인과 쿠키에 설정된 도메인이 같은 경우만 쿠키 전송
