--- a/_posts/2021-01-19-0118-0124.md
+++ b/_posts/2021-01-19-0118-0124.md
@@ -288,3 +288,31 @@ category: TIL
 * SameSite
 	* XSRF 공격 방지
 	* 요청 도메인과 쿠키에 설정된 도메인이 같은 경우만 쿠키 전송
+
+	# 0122
+	# script async와 defer의 차이점
+*node js에는 자바스크립트 엔진이 있어서 브라우저 없이도 자바스크립트를 실행 가능하다.*
+
+## async vs defer
+
+### head 안에 스크립트 파일을 포함할 경우
+* HTML파일을 파싱하다가 멈춰서 js파일을 다운하고 실행한 뒤 다시 HTML을 파싱한다.
+* JS 파일이 클 경우 HTML을 보기까지 시간이 오래걸린다.
+
+### body 끝에 스크립트 파일을 포함할 경우
+* HTML파일 파싱을 마치고 js파일을 다운하고 실행한다.
+* js파일에 의존적인 웹사이트라면 사용자가 정상적인 페이지를 보기 전까지 js파일을 다운하고 실행하는 시간을 기다려야한다.
+
+### head + async
+* HTML파일을 파싱하다가 js파일을 다운하는 시간동안은 계속 파일을 파싱하고, 모두 다운되면 그 때 멈춰서 js파일을 실행한 후 다시 파싱한다.
+* 파싱되기도 전에 js파일이 실행 되기 때문에 원하는 요소가 아직 정의되지 않았을 수 있다.
+
+### head + defer
+* HTML파일을 파싱하다가 js파일을 다운하면서 HTML파일은 끝까지 파싱한다. 그리고 파싱이 마치면 js파일을 실행한다.
+* 가장 좋은 방법
+
+`'use strict';`
+* 자바스크립트는 매우 유연한 언어기 때문에 이 명령을 선언하게 되면 문법을 좀 더 엄격하게 에러로 잡아내 준다.
+* 자바스크립트 엔진이 더 빠르게 자바스크립트를 분석할 수 있어서 성능 개선 효과도 있다.
+
+
