--- a/_posts/2021-01-19-0118-0124.md
+++ b/_posts/2021-01-19-0118-0124.md
@@ -289,8 +289,8 @@ category: TIL
 	* XSRF 공격 방지
 	* 요청 도메인과 쿠키에 설정된 도메인이 같은 경우만 쿠키 전송
 
-	# 0122
-	# script async와 defer의 차이점
+# 0122
+# script async와 defer의 차이점
 *node js에는 자바스크립트 엔진이 있어서 브라우저 없이도 자바스크립트를 실행 가능하다.*
 
 ## async vs defer
@@ -315,4 +315,180 @@ category: TIL
 * 자바스크립트는 매우 유연한 언어기 때문에 이 명령을 선언하게 되면 문법을 좀 더 엄격하게 에러로 잡아내 준다.
 * 자바스크립트 엔진이 더 빠르게 자바스크립트를 분석할 수 있어서 성능 개선 효과도 있다.
 
+# 0123
+# 데이터 타입  
+## Immutable data types vs Mutable data types
+Immutable data types - primitive types, frozen objects  
+Mutable data types - all objects
 
+
+## 변수
+* 메모리에 읽고 쓰기 가능  
+global scope - 문서 전체에서 사용할 수 있는 범위  
+block scope - 블록 내부에서 선언하고 사용할 수 있는 범위  
+-> global scope범위의 변수를 최대한 줄여 주는 것이 좋다.
+
+### var
+- var hoisting - 어디에 선언했냐에 상관없이 제일 위로 끌어올려준다.
+- 블록 스코프를 무시한다. 블록 내부에 선언해도 밖에서도 호출 가능
+- 선언되지도 않은 변수에 값을 할당하거나 호출할 수 있다.  
+-> var을 let으로 대체한다.
+
+## 상수
+* 메모리에서 읽기만 가능
+선언함과 동시에 값을 할당하고, 다시는 값을 변경할 수 없다.
+
+*웬만하면 값을 할당한 다음 값이 변경되지 않는 데이터 타입을 사용해라*
+* 보안
+* 스레드 안전성 - 다양한 스레드들이 변수에 접근하여 값이 변경된다면 위험할 수도 있다.
+* 값을 변경할 이유가 없다면 const를 이용해서 코드를 작성하는 것이 좋다.
+
+## 변수 타입
+### 숫자 타입
+* 자바 스크립트에서 숫자 타입은 모두 number 타입
+* 특별한 number 타입
+	* const infinity = 1 / 0;
+	* const negativeInfinity = -1 / 0;
+	* const nAn = 'not a number' / 2;
+
+### 문자 타입
+* 하나의 글자든 여러 개의 글자던 모두 string 타입
+* template literals - 백 틱을 이용하여 문자 타입과 변수를 쉽게 연결
+	* 백 틱 ` 사이에 문자를 집어 넣고 변수는 ${}사이에 입력한다.
+
+### 불리언 타입
+* false: 0, null, undefined, NaN,  ''
+* true: 다른 값들  
+null - null이라고 확실히 지정되어 있는 상태  
+undefined -  undefined라고 지정되어 있거나, 선언만 되어있고 값이 들어갈지 아닐지 모르는 상태
+
+### symbol
+* 맵이나 다른 자료구조에서 고유한 식별자가 필요하거나, 동시다발적으로 일어날 수 있는 코드에서 우선순위를 주고 싶을 때 쓰여지는 것
+
+```javascript
+const symbol1 = Symbol('id');
+const symbol2 = Symbol('id');  // 이 둘은 비교 연산자로 비교해보면 다르다. 문자열로 비교 x
+
+const symbol1 = Symbol.for('id');
+const symbol2 = Symbol.for('id');  // 문자열로 심볼 값을 주고 싶다면 Symbol뒤에 .for을 붙여준다.
+
+console.log(`value:  ${symbol1.description}`  // 출력 시에는 뒤에 .description을 붙여줘서 값을 받아올 수 있다.
+``` 
+
+## Dynamic typing
+* 자바 스크립트는 런타임 시 변수의 타입을 확인하는 동적 타이핑 언어이다.
+* string타입 + number타입 = string타입으로 자동 변환
+* string타입(내용은 숫자) / string타입(내용은 숫자) = number타입으로 자동 변환
+* Dynamic typing으로 인해 에러가 많이 발생한다.   
+-> string타입으로 이용했던 변수가 number타입으로 변하고 추후에 다시 charAt()으로 참조하는 경우
+
+## first-class function
+* 함수도 다른 데이터 타입처럼 변수에 할당이 가능하고, 인자나 리턴 값으로도 함수 사용이 가능하다.
+
+# 연산자
+## 논리 연산자
+* 논리 연산자에서는 무거운 표현식이나 함수 호출을 가장 뒤에 적어야 한다.  
+-> 앞에서 전체 결과가 확정되면 뒤에 연산은 실행하지 않아도 되기 때문이다.
+
+## 비교 연산자
+* ==, != 
+	* loose equality, 타입 변환  허용
+* ===, !==
+	* strict equality, 타입  변환 비허용
+
+```javascript
+const con1 = { name: 'con' };
+const con2 = { name: 'con' };
+const con3 = con1
+console.log(con1 == con2);	  // false - reference가 다르다.
+console.log(con1 === con2);	  // false
+console.log(con1 === con3);   	// true
+
+console.log(0 == false);			// true
+console.log(0 === false);			// false
+console.log('' == false);			// true
+console.log('' === false);			// false
+console.log(null == undefined);			// true
+console.log(null === undefined);		// false
+```
+
+# Function
+## Function declaration
+```javascript
+function name(param1, param2) {
+	// 내용
+	return;
+}
+```
+* 하나의 함수는 하나의 기능만 가져야 한다.
+
+### 파라미터
+* 기본형 파라미터: passed by value
+* 객체형파라미터: passed by reference
+
+### 디폴트 파라미터
+```javascript
+function showMessage(message, from = 'unknown') { //from 인자 값을 넣어주지 않으면 디폴트 값 설정
+    console.log(`${message} by ${from}`);
+}
+```
+
+### Rest 파라미터
+* 파라미터를 `...args `로 설정하면 가변 배열로 인자를 받을 수 있다.
+
+### Local scope
+* 안에서는 바깥 범위의 변수를 호출할 수 있지만, 바깥에서 안에서 선언한 변수를 호출할 수는 없다.
+
+### early return
+* if문을 작성할 때 if문 안에 들어갔을 때 여러 복잡한 상황들을 넣어 주는 것보다, if문에 들어갔을 시에 빠르게 return문을 실행해 주도록 조건문을 설정하고, 그 밑에 복잡한 상황들을 넣어주는 것이 더 좋은 코드이다. 
+
+## Function expression
+* function declaration 방식은 선언되기 이전에 함수를 호출할 수 있다. - 호이스팅
+* 반면 function expression은 실행에 도달한 이후에 함수가 생성된다.
+```javascript
+const print = function() {
+	//anonymous function
+	console.log('print');
+};
+print();
+```
+
+### function expression을 이용한 콜백 함수
+```javascript
+function randomQuiz(answer, printYes, printNo) {
+    if (answer === 'love you') {
+        printYes();
+    } else {
+        printNo();
+    }
+}
+
+const printYes = function() {
+    console.log('yes!');
+};
+
+const printNo = function print() {	// named function - 디버깅할 때 이용
+    console.log('no!');
+};
+
+randomQuiz('love you', printYes, printNo);
+```
+
+### Arrow function
+* 항상 익명함수
+```javascript
+const add = (a, b) => a + b;
+const add = (a, b) => {
+	//do something
+	return; // 중괄호 있으면 리턴 필수
+};
+```
+
+### IIFE 
+* Immediately invoked function expression
+* 함수를 정의함과 동시에 실행
+```javascript
+(function hello() {
+    console.log('hello');
+})();
+```
