--- a/_posts/2021-01-19-0118-0124.md
+++ b/_posts/2021-01-19-0118-0124.md
@@ -492,3 +492,56 @@ const add = (a, b) => {
     console.log('hello');
 })();
 ```
+
+## 0124
+# 클래스
+* class: 템플릿
+* object: 클래스의 인스턴스
+
+## 클래스 정의
+```javascript
+class Person {
+    //생성자
+    constructor(name, age) {
+        //필드
+        this.name = name;
+        this.age = age;
+    }
+
+    //methods
+    speak() {
+        console.log(`${this.name}: hello!`);
+    }
+}
+```
+* 클래스를 생성할 때는 `const 변수이름 = new Person('name', 20);`과 같은 형식으로 생성한다.
+
+## 게터와 세터
+```javascript
+class User {
+    constructor(firstName, Lastname, age) {
+        this.firstName = firstName;
+        this.Lastname = Lastname;
+        this.age = age;
+    }
+
+    get age() {
+        return this._age;
+    }
+
+    set age(value) {
+        this._age = value;
+    }
+ }
+```
+* 변수에 사용자가 적절하지 않은 값을 입력하여 대입될 수도 있기 때문에 이를 방지하기 위해 게터와 세터 메서드를 정의한다.
+* 게터와 세터 메서드를 설정하면 this.age를 호출하거나 this.age에 값을 대입할 때 자동으로 게터와 세터 메서드가 호출된다. 세터에서 똑같은 필드명을 사용하면 계속해서 세터를 호출하여 무한루프를 돌기 때문에 변수명 앞에 '_'를 붙여준다.
+* console.log로 필드를 호출할 수 있는 이유도 내부적으로 필드를 호출하면 자동으로 게터 메서드가 호출되기 때문이다.
+
+## public, private
+* 필드나 메서드 앞에 `#`을 붙이면 private 접근 제한자를 가지게 된다. 기본은 public.
+* private한 변수를 콘솔에 찍어보면 'undefined'가 나온다.
+
+## static 속성과 메서드
+* 필드나 메서드 앞에 `static`을 붙이면 각 오브젝트가 공통으로 공유하는 변수나 메서드가 된다.
+* static 필드나 메서드를 호출할 때는 `클래스이름.`으로 호출해야 한다.
