--- a/_posts/2021-01-26-0125-0131.md
+++ b/_posts/2021-01-26-0125-0131.md
@@ -150,3 +150,44 @@ fruits.forEach(fruit => console.log(fruit));
 
 ### lastIndexOf - 데이터의 인덱스 위치를 뒤에서부터 찾아서 반환
 `배열이름.lastIndexOf('데이터');`
+
+## 0127
+# JSON
+*Javascript Object Notation - 자바스크립트 객체 표기법*
+
+## 객체를 JSON으로
+### stringify(obj)
+```javascript
+const rabbit = {
+    name: 'tory',
+    color: 'white',
+    size: null,
+    birthDate: new Date(),
+    jump: function () {
+        console.log(`${this.name} can jump!`);
+    }
+}
+
+let json = JSON.stringify(rabbit); // 객체를 json으로 변환한다. 이 때 함수는 포함되지 않는다.
+json = JSON.stringify(rabbit, ['name', 'color', 'size'], 4); // 객체에서 원하는 키 값만 json으로 변환할 수 있다. 숫자는 들여쓰기를 통해 json을 읽기 쉽게 해준다.
+
+json = JSON.stringify(rabbit, (key,value) => {
+    console.log(`key: ${key}, value: ${value}`);
+    return key === 'name' ? 'ellie' : value;
+});
+// 위처럼 정보를 조작하여 json화 하기 위해서는 replacer를 콜백함수로 이용하여 데이터를 바꿀 수 있다.
+```
+
+## JSON을 자바스크립트 객체로
+### parse(json)
+```javascript
+let json = JSON.stringify(rabbit); // rabbit객체를 json화
+
+const obj = JSON.parse(json, (key, value) => {
+    console.log(`key: ${key}, value: ${value}`);
+    return key === 'birthDate' ? new Date(value) : value;
+});
+// replacer와 마찬가지로 json을 다시 객체화 시킬 때도 reviver 콜백함수를 이용해서 정보를 조작하여 객체화 시킬 수 있다.
+```
+* 한 번 json화 하고 다시 객체화 한 객체로는 기존에 있던 함수를 호출할 수 없다.
+* 위의 경우 birthDate의 getDate() 메소드를 사용하기 위해서는 json화 하면서 string 값으로 변해버린 값을 다시 new Date로 생성해서 저장해줘야 한다.
