--- a/_posts/2021-01-26-0125-0131.md
+++ b/_posts/2021-01-26-0125-0131.md
@@ -191,3 +191,11 @@ const obj = JSON.parse(json, (key, value) => {
 ```
 * 한 번 json화 하고 다시 객체화 한 객체로는 기존에 있던 함수를 호출할 수 없다.
 * 위의 경우 birthDate의 getDate() 메소드를 사용하기 위해서는 json화 하면서 string 값으로 변해버린 값을 다시 new Date로 생성해서 저장해줘야 한다.
+
+## 0128
+### 일주일 동안 프론트엔드 개발을 진행하며 느낀 점
+* 프론트엔드와 백엔드 간의 데이터 통신이 어떻게 진행되는지 직접 사용해보며 익혔다.
+* 데이터의 validation 체크를 위해 라이브러리를 이용하여 유효한 값을 지정해주고, 정규식을 사용해봤다.
+* hosts 파일을 조작하여 localhost를 도메인으로 바꿔 사용해보았다.
+* 개발 서버를 동작시켜서 이용해보았다.
+* 가장 크게 느낀 점은 풀스택 개발을 통해 더 좋은 백엔드 개발자로 성장할 수 있을 것 같다는 것이다.
