--- a/_posts/2021-01-26-0125-0131.md
+++ b/_posts/2021-01-26-0125-0131.md
@@ -199,3 +199,20 @@ const obj = JSON.parse(json, (key, value) => {
 * hosts 파일을 조작하여 localhost를 도메인으로 바꿔 사용해보았다.
 * 개발 서버를 동작시켜서 이용해보았다.
 * 가장 크게 느낀 점은 풀스택 개발을 통해 더 좋은 백엔드 개발자로 성장할 수 있을 것 같다는 것이다.
+
+## 0129
+```javascript
+const signIn = async (info) => {
+  try {
+    let params = new URLSearchParams();
+    params.append('email', info.email);
+    params.append('password', info.password);
+    const req = await axios.post('http://도메인이름:8080/User/login', params, { withCredentials: true });
+    return req.data
+
+  } catch (e) {
+    console.error(`server error : ${e.error}`)
+  }
+}
+```
+* axios를 이용해서 API를 호출할 때 쿠키 값을 받아오거나 전달하는 경우, withCredentials옵션을 true로 해줘야만 쿠키 값을 이용해 동작시킬 수 있다.
