--- a/_posts/2021-01-26-0125-0131.md
+++ b/_posts/2021-01-26-0125-0131.md
@@ -216,3 +216,35 @@ const signIn = async (info) => {
 }
 ```
 * axios를 이용해서 API를 호출할 때 쿠키 값을 받아오거나 전달하는 경우, withCredentials옵션을 true로 해줘야만 쿠키 값을 이용해 동작시킬 수 있다.
+
+## 0130
+# 콜백
+## 자바스크립트의 콜백
+* Javascript는 동기적이다.
+* 호이스팅 이후에 코드 블록을 순서대로 실행한다.
+
+## 콜백 함수
+*콜백 함수라는 것은 인자로 전달해준 함수를 나중에 호출해 주는 것*
+
+### Synchronous 콜백
+```javascript
+function printImmediately(print) {
+    print();
+}
+
+printImmediately(() => console.log(2));
+```
+
+### Asynchronous 콜백
+```javascript
+function printWithDelay(print, timeout) {
+    setTimeout(print, timeout)
+}
+printWithDelay(() => console.log('async'), 2000);
+```
+* 콜백 함수에는 즉각적으로 실행하는 동기 콜백과 나중에 언제 실행될지 모르는 비동기 콜백이 있다.
+* 콜백 함수는 주로 Arrow function을 이용해서 작성한다.
+
+### 콜백 지옥
+* 콜백안에 콜백을 작성하고, 또 그 안에 콜백을 작성하는 식의 코딩을 콜백 지옥이라고 칭한다.
+* 가독성이 떨어지고, 에러가 발생하거나 디버깅을 할 때에도 문제를 찾아내기가 어렵기 때문에 좋지 않다.
