--- a/_posts/2021-02-03-0201-0207.md
+++ b/_posts/2021-02-03-0201-0207.md
@@ -37,3 +37,27 @@ promise.then((value) => {   //then은 promise가 성공적으로 마치고나면
     console.log('finally');  //성공이던 실패이던 호출한다.
 })
 ```
+
+## 0202
+# Async
+* 프로미스 사용의 깔끔한 스타일
+* syntactic sugar - 기존에 존재하는 것을 감싸서 우리가 조금 더 간편하게 쓸 수 있는 api를 제공하는 것
+
+## async
+* 코드 블럭이 자동으로 프로미스로 바뀐다.
+```javascript
+async function fetchUser() {  
+    // do network request in 10 secs...
+    return 'ellie'
+}
+```
+
+## await
+* async가 붙은 함수 안에서만 사용 가능
+```javascript
+async function getApple() {
+	await delay(3000);
+	return '🍌';
+}
+```
+-> 동기적으로 처리되는 것처럼 보이게 한다.
