--- a/_posts/2021-02-03-0201-0207.md
+++ b/_posts/2021-02-03-0201-0207.md
@@ -61,3 +61,9 @@ async function getApple() {
 }
 ```
 -> 동기적으로 처리되는 것처럼 보이게 한다.
+
+## 0203
+* 자바스크립트를 기본만 하고, 다시 백엔드 공부로 넘어가려고 한다.
+* 우선 스프링의 원리부터 깊게 학습하고, 개념을 깊게 학습하는 것은 백엔드 위주로 해야겠다고 다시 방향을 잡았다.
+* 뷰는 계속해서 사용법을 익히고 그와 관련된 학습들을 조금씩 공부할 예정이다. 하지만 뷰의 기반 언어는 자바스크립트인데, 두 마리 토끼를 모두 잡기에는 시간이 부족해서 선택과 집중을 해야겠다고 생각했다.  
+-> 다시 초심으로 돌아와서 백엔드 위주의 깊은 학습을 하고, 뷰는 간단하게 한 번 보고 필요할 때마다 찾아서 공부하는 방식으로 학습을 진행해야겠다.
