--- a/_posts/2021-02-03-0201-0207.md
+++ b/_posts/2021-02-03-0201-0207.md
@@ -67,3 +67,35 @@ async function getApple() {
 * 우선 스프링의 원리부터 깊게 학습하고, 개념을 깊게 학습하는 것은 백엔드 위주로 해야겠다고 다시 방향을 잡았다.
 * 뷰는 계속해서 사용법을 익히고 그와 관련된 학습들을 조금씩 공부할 예정이다. 하지만 뷰의 기반 언어는 자바스크립트인데, 두 마리 토끼를 모두 잡기에는 시간이 부족해서 선택과 집중을 해야겠다고 생각했다.  
 -> 다시 초심으로 돌아와서 백엔드 위주의 깊은 학습을 하고, 뷰는 간단하게 한 번 보고 필요할 때마다 찾아서 공부하는 방식으로 학습을 진행해야겠다.
+
+## 0204
+# 객체 지향 설계와 스프링
+**스프링의 핵심**
+스프링은 자바 언어 기반의 프레임워크로 좋은 객체 지향 애플리케이션을 개발할 수 있게 도와준다.
+
+## 객체 지향 프로그래밍
+* 프로그램을 객체들의 모임으로 파악하고자 하는 것. 객체는 메시지를 주고받고, 데이터를 처리할 수 있다.
+* 가장 큰 장점은 프로그램을 유연하고 변경이 용이하게 만든다.  
+-> 컴포넌트를 쉽고 유연하게 변경하면서 개발할 수 있는 방법
+
+## 다형성
+* 역할(인터페이스)과 구현(구현 객체)으로 구분하면 세상이 단순해지고, 유연해지며 변경이 편리해진다.
+* 클라이언트는 대상의 역할만 알면 되고, 내부 구조를 몰라도 된다.
+* 클라이언트는 구현 대상의 내부 구조가 변경되거나 대상 자체를 변경해도 영향을 받지 않는다.  
+* **객체를 설계할 때 역할과 구현을 명확히 분리**
+
+### 다형성의 본질
+* 혼자 있는 객체는 없고, 수 많은 객체 클라이언트와 객체 서버는 서로 협력 관계를 가지는 것에서부터 시작
+* 인터페이스를 구현한 객체 인스턴스를 실행 시점에 유연하게 변경할 수 있다.
+* 클라이언트를 변경하지 않고, 서버의 구현 기능을 유연하게 변경할 수 있다.
+
+### 장점
+* 유연하고, 변경이 용이
+* 확장 가능한 설계
+* 클라이언트에 영향을 주지 않는 변경 가능
+* **인터페이스를 안정적으로 잘 설계하는 것이 중요**  
+-> 역할(인터페이스) 자체가 변하면, 클라이언트, 서버 모두에 큰 병경이 발생하므로
+
+## 스프링과 객체 지향
+* 스프링은 다형성을 극대화해서 이용할 수 있게 도와준다.
+* 제어의 역전(IoC), 의존관계 주입(DI)은 다형성을 활용해서 역할과 구현을 편리하게 다룰 수 있도록 지원한다.
