--- a/_posts/2021-02-03-0201-0207.md
+++ b/_posts/2021-02-03-0201-0207.md
@@ -99,3 +99,11 @@ async function getApple() {
 ## 스프링과 객체 지향
 * 스프링은 다형성을 극대화해서 이용할 수 있게 도와준다.
 * 제어의 역전(IoC), 의존관계 주입(DI)은 다형성을 활용해서 역할과 구현을 편리하게 다룰 수 있도록 지원한다.
+
+## 0205
+*새로운 프로젝트를 진행하기 위해 팀원과 만나서 회의를 하는 시간을 가졌다. 그 동안 공부하면서 느꼈던 것들을 공유하기도 하고, 아이디어를 통해 프로젝트의 큰 주제를 정하고 꿈을 키웠다. 상당히 재미있는 프로젝트가 될 것 같다는 느낌이 크게 들었다.*
+* 우선 프로젝트를 본격적으로 시작하기 전에 실력을 테스트하고 돌아보고자 작은 토이 프로젝트를 진행하기로 했다.
+* Vue, Java, Spring, Mysql을 활용하여 게시판을 작성하고 필요한 기능들을 구현하고자 한다.
+* 스토리보드를 카카오오븐을 이용하여 작성하고 화면과 기능들을 정의하였다.
+* 비록 5개의 화면으로만 구현되어있는 프로젝트이지만, 생각보다 구현해야할 기능이 많았다.
+* 구조를 잡는데에 집중하여 프로젝트를 잘 성공시켜서 더 큰 프로젝트를 하는 데 있어서 자신감을 키울 수 있는 기회가 되었으면 좋겠다.
