--- a/_posts/2021-02-03-0201-0207.md
+++ b/_posts/2021-02-03-0201-0207.md
@@ -107,3 +107,41 @@ async function getApple() {
 * 스토리보드를 카카오오븐을 이용하여 작성하고 화면과 기능들을 정의하였다.
 * 비록 5개의 화면으로만 구현되어있는 프로젝트이지만, 생각보다 구현해야할 기능이 많았다.
 * 구조를 잡는데에 집중하여 프로젝트를 잘 성공시켜서 더 큰 프로젝트를 하는 데 있어서 자신감을 키울 수 있는 기회가 되었으면 좋겠다.
+
+## 0206
+## 좋은 객체 지향 설계의 5가지 원칙 (SOLID)
+### SRP(Single responsibility principle) - 단일 책임 원칙
+* 한 클래스는 하나의 책임만 가져야 한다.
+* 중요한 기준은 변경. 변경이 있을 때 파급 효과가 적으면 단일 책임 원칙을 잘 따른 것
+* ex) UI 변경,  객체의 생성과 사용을 분리
+
+### OCP(Open/closed principle) - OCP 개방/폐쇄 원칙
+* 소프트웨어 요소는 확장에는 열려있으나 변경에는 닫혀있어야 한다.
+* **다형성을 활용**
+```java
+MemberRepository m = new MemoryMemberRepository(); //기존 코드
+MemberRepository m = new JdbcMemberRepository(); // 변경 코드
+```
+* 구현 객체를 변경하려면 클라이언트 코드를 변경해야 하므로 다형성을 사용했지만 OCP 원칙을 지킬 수 없다.  
+-> 객체를 생성하고, 연관관계를 맺어주는 별도의 설정자가 필요하다
+
+### LSP(Liskov substiturion principle) - 리스코프 치환 원칙
+* 프로그램의 객체는 프로그램의 정확성을 깨뜨리지 않으면서 하위 타입의 인스턴스로 바꿀 수 있어야 한다.
+* 다형성에서 하위 클래스는 인터페이스 규약을 다 지켜야 한다는 것, 단순히 컴파일에 성공하는 것을 넘어선다.
+* ex) 자동차 인터페이스의 엑셀은 앞으로 가라는 기능, 뒤로 가게 구현하면 LSP 위반
+
+### ISP(Interface segregation principle) - 인터페이스 분리 원칙
+* 특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫다.
+* 인터페이스가 명확해지고, 대체 가능성이 높아진다.
+
+### DIP(Dependency inversion principle) - 의존관게 역전 원칙
+* 구현 클래스에 의존하지 말고, 인터페이스에 의존해야 한다.
+* 클라이언트가 인터페이스에 의존해야 유연하게 구현체를 변경할 수 있다. 구현제에 의존하면 변경이 아주 어려워짐
+* OCP에서 설명한 MemberService는 인터페이스에 의존하지만, 구현 클래스도 동시에 의존한다.  
+-> DIP 위반
+
+## 객체 지향 설계와 스프링
+* 객체 지향의 핵심은 다형성인데, 이 만으로는 OCP, DIP를 지킬 수 없다.
+* 스프링은 DI와 DI 컨테이너를 제공해서 이를 지킬 수 있도록 지원한다.
+* 클라이언트 코드의 변경 없이 기능을 확장하고 쉽게 부품을 교체하듯이 개발 가능하다.
+* 이상적으로는 모든 설계에 인터페이스를 부여해야하나, 인터페이스에는 추상화라는 비용이 발생하기에 기능을 확장할 가능성이 없다면 구체 클래스를 직접 사용하고, 필요할 때 리팩터링해서 인터페이스를 도입하는 것도 방법이다.
