--- a/_posts/2021-02-03-0201-0207.md
+++ b/_posts/2021-02-03-0201-0207.md
@@ -145,3 +145,18 @@ MemberRepository m = new JdbcMemberRepository(); // 변경 코드
 * 스프링은 DI와 DI 컨테이너를 제공해서 이를 지킬 수 있도록 지원한다.
 * 클라이언트 코드의 변경 없이 기능을 확장하고 쉽게 부품을 교체하듯이 개발 가능하다.
 * 이상적으로는 모든 설계에 인터페이스를 부여해야하나, 인터페이스에는 추상화라는 비용이 발생하기에 기능을 확장할 가능성이 없다면 구체 클래스를 직접 사용하고, 필요할 때 리팩터링해서 인터페이스를 도입하는 것도 방법이다.
+
+## 0207
+# 스프링 핵심 원리 이해
+## 순수 자바만으로 프로젝트를 진행할 경우
+* 요구사항 중에서 어떤 저장소를 사용할 지, 또는 서비스가 미확정일 상황이 생길 수도 있다.  
+-> 객체 지향적인 설계 방법을 통해서 인터페이스를 만들고 구현체를 언제든지 갈아끼울 수 있도록 설계하면 된다.
+* 크게 도메인, 서비스, 리포지토리 영역으로 구분된다.
+
+### 문제점
+* 다형성만으로는 다른 저장소로 변경할 때 OCP 원칙을 준수하지 못하고, DIP를 지키지 못하고 있다.
+* 의존관계가 인터페이스 뿐만 아니라 구현까지 의존하는 문제점이 있다.
+
+### JUnit 
+* 애플리케이션 로직으로 테스트 하는 것은 좋은 방법이 아니다. 스프링이 지원하는 JUint 테스트를 사용하자
+* Test 밑에 패키지로 구분하여 작성하고, 실행할 메소드 위에 `@Test`어노테이션을 붙여서 사용한다
