--- a/_posts/2021-02-09-0208-0214.md
+++ b/_posts/2021-02-09-0208-0214.md
@@ -3,7 +3,7 @@ title: "0208-0214"
 tag: TIL
 category: TIL
 ---
-## 0201
+## 0208
 # Vue.js
 
 
@@ -36,3 +36,106 @@ category: TIL
 * **양방향 데이터 바인딩**: 화면에 표시되는 값과 프레임워크의 모델 데이터 값이 동기화되어 한쪽이 변경되면 다른 한쪽도 자동으로 변경되는 것
 * **단방향 데이터 흐름**: 컴포넌트의 단방향 통신. 컴포넌트 간에 데이터를 전달할 때 항상 상위 컴포넌트에서 하위 컴포넌트 한 방향으로만 전달하게끔 프레임워크가 구조화
 * **가상 돔 렌더링 방식**: 특정 돔 요소를 추가하거나 삭제하는 변경이 일어날 때 화면 전체를 다시 그리지 않고 프레임워크에서 정의한 방식에 따라 화면을 갱신.
+
+## 0209
+## 0208
+*프로젝트 진행 중에 게시물을 페이징 해야해서 그와 관련된 내용들을 컴포넌트로 구분하여 개발하였다.*
+```vue
+<template>
+  <div class="pagination">
+        <button type="button" class="btn_first" title="첫 페이지로 이동" v-if="first" @click="changeLink(1)"><span>처음</span></button>
+        <button type="button" class="btn_prev" title="이전 5개 목록 페이지로 이동" v-if="prev" @click="changeLink(startPageIndex - 1)"><span>이전</span></button>
+
+        <ul class="paging">
+            <li v-for="index in endPageIndex-startPageIndex + 1" :key="index">
+                <button type="button" :class="{on: (startPageIndex + index - 1) == currentPage}" title="현재페이지로 이동" @click="changePage(index)">{{ startPageIndex + index - 1 }}</button>
+            </li>
+        </ul>
+
+        <button type="button" class="btn_next" title="다음 5개 목록 페이지로 이동" v-if="next" @click="changeLink(endPageIndex + 1)"><span>다음</span></button>
+        <button type="button" class="btn_end" title="마지막 페이지로 이동" v-if="end" @click="changeLink(pageCount)"><span>끝</span></button>
+    </div>            
+</template>
+
+<script>
+export default {
+    props: ['listRowCount', 'totalListItemCount', 'pageLinkCount', 'currentPage'],    //listRowCount: 한 페이지당 리스트 개수, totalListItemCount: 총 리스트 개수, pageLinkCount: 링크당 페이지 개수
+    data() {
+        return {
+            pageCount: 0,       //페이지 개수
+            startPageIndex: 0,  //링크에서 페이지 시작 인덱스
+            endPageIndex: 0,    //링크에서 페이지 마지막 인덱스
+            prev: false,
+            next: false,
+            first: false,
+            end: false
+        }
+    },
+    methods: {
+        initUI() {
+            this.pageCount= Math.ceil(this.totalListItemCount/this.listRowCount);
+
+            if((this.currentPage % this.pageLinkCount) == 0) {
+                this.startPageIndex = ((this.currentPage / this.pageLinkCount) -1) * this.pageLinkCount + 1;
+            } else {
+                this.startPageIndex = Math.floor(this.currentPage / this.pageLinkCount) * this.pageLinkCount + 1;
+            }
+
+            if((this.currentPage % this.pageLinkCount == 0)) {
+                this.endPageIndex = ((this.currentPage / this.pageLinkCount)-1)* this.pageLinkCount + this.pageLinkCount;
+            } else {
+                this.endPageIndex = Math.floor(this.currentPage / this.pageLinkCount)* this.pageLinkCount + this.pageLinkCount;
+            }
+
+            if(this.currentPage <= this.pageLinkCount) {
+                this.prev = false;
+                this.first = false;
+            } else {
+                this.prev = true;
+                this.first = true;
+            }
+
+            if(this.endPageIndex >= this.pageCount) {
+                this.endPageIndex = this.pageCount;
+                this.next = false;
+                this.end = false;
+            } else {
+                this.next = true;
+                this.end = true;
+            }
+
+            console.log(`startPageIndex: ${this.startPageIndex}`);
+            console.log(`endPageIndex: ${this.endPageIndex}`);
+            console.log(`pageCount: ${this.pageCount}`);
+        },
+        changePage(index) {
+            let selectedPage = this.startPageIndex + index - 1;
+            this.$emit('update', selectedPage);
+        },
+        changeLink(index) {
+            this.$emit('update', index);
+        }
+    },
+    watch: {
+        currentPage: function() {
+            this.initUI();
+        },
+        totalListItemCount: function () {
+            this.initUI();
+        },
+        listRowCount: function () {
+            this.initUI();
+        },
+        pageLinkCount: function () {
+            this.initUI();
+        }
+    },
+    created() {
+        this.initUI();
+    }
+}
+</script>
+```
+* props로 현재 페이지, 링크 당 페이지, 총 아이템 개수, 페이지당 아이템 개수를 받아서 여러 상황에서 재사용 할 수 있도록 작성하였다.
+* props 데이터가 변경할 때마다 initUI()를 실행시켜서 페이지 관련 변수들을 초기화 시켰다.
+* 상위 컴포넌트에 현재 페이지를 전달하여 메서드를 실행시켜 페이지에 해당하는 목록을 반환하였다.
