--- a/_posts/2021-02-09-0208-0214.md
+++ b/_posts/2021-02-09-0208-0214.md
@@ -48,7 +48,7 @@ category: TIL
 
         <ul class="paging">
             <li v-for="index in endPageIndex-startPageIndex + 1" :key="index">
-                <button type="button" :class="{on: (startPageIndex + index - 1) == currentPage}" title="현재페이지로 이동" @click="changePage(index)">{{ startPageIndex + index - 1 }}</button>
+                <button type="button" :class="{on: ((startPageIndex + index - 1) == currentPage)}" title="현재페이지로 이동" @click="changePage(index)">{{ startPageIndex + index - 1 }}</button>
             </li>
         </ul>
 
@@ -285,3 +285,121 @@ MemberService memberService = applicationContext.getBean("memberService", Member
 * 스프링 컨테이너는 @Configuration이 붙은 AppConfig를 설정 정보로 사용한다. 여기서 @Bean이라 적힌 메서드를 모두 호출해서 반환된 객체를 스프링 컨테이너에 등록한다. 이렇게 등록된 객체를 스프링 빈이라고 한다.
 * 스프링 빈은 @Bean이 붙은 메서드의 명을 스프링 빈의 이름으로 사용한다.
 * 이전에는 개발자가 필요한 객체를 AppConfig를 직접 조회했지만, 이제부터는 스프링 컨테이너를 통해서 스프링 빈을 찾아야 한다. 스프링 빈은 applicationContext.getBean()메서드를 사용해서 찾을 수 있다.
+
+## 0211
+# 스프링 컨테이너와 스프링 빈
+## 스프링 컨테이너의 생성 과정
+### 스프링 컨테이너 생성
+```java
+//스프링 컨테이너 생성
+ApplicationContext ac = new AnnotationConfigApplicationContext(AppConfig.class);
+```
+* ApplicationContext는 인터페이스이며, 스프링 컨테이너라고 한다.
+* 스프링 컨테이너는 XML기반 또는 애노테이션 기반의 자바 설정 클래스로 만들 수 있다.
+* `new AnnotationConfigApplicationContext(AppConfig.class);`는 ApplicationContext 인터페이스의 구현체이다.
+* 스프링 컨테이너를 생성할 때는 구성 정보를 지정해주어야 하는데, AppConfig.class를 구성 정보로 지정했다.
+
+### 스프링 빈  등록
+* 스프링 컨테이너는 파라미터로 넘어온 설정 클래스 정보를 사용해서 스프링 빈을 등록한다.
+* 빈 이름은 메서드 이름을 사용하고, 이름을 직접 부여할 수도 있지만 항상 다른 이름을 부여해야 한다.
+
+### 의존관계 설정
+* 스프링 컨테이너는 설정 정보를 참고해서 의존관계를 주입한다.
+* 단순히 자바 코드를 호출하는 것 같지만, 차이가 있다.
+* 스프링은 빈을 생성하고, 의존관계를 주입하는 단계가 나누어져 있다.
+
+## 컨테이너에 등록된 빈 조회
+### 모든 빈 출력하기
+* 실행하면 스프링에 등록된 모든 빈 정보를  출력할 수 있다.
+* `ac.getBeanDefinitionNames()`:  스프링에 등록된 모든 빈 이름을 조회한다.
+
+### 애플리케이션 빈 출력하기
+* 스프링 내부에서 사용하는 빈을 제외하고, 등록한 빈만 출력
+* 스프링 내부에서 사용하는 빈은 `getRole()`로 구분할 수 있다.
+	* `ROLE_APPLICATION`: 일반적으로 사용자가 정의한 빈
+	* `ROLE_INFRASTRUCTURE`: 스프링이 내부에서 사용하는 빈
+
+```java
+@Test
+@DisplayName("애플리케이션 빈 출력하기")
+void findApplicationBean() {
+    String[] beanDefinitionNames = ac.getBeanDefinitionNames();
+    for (String beanDefinitionName : beanDefinitionNames) {
+        BeanDefinition beanDefinition = ac.getBeanDefinition(beanDefinitionName);
+        if (beanDefinition.getRole() == BeanDefinition.ROLE_APPLICATION) {
+            Object bean = ac.getBean(beanDefinitionName);
+            System.out.println("name = " + beanDefinitionName + " object = " + bean);
+        }
+    }
+}
+```
+
+### 스프링 빈 조회 - 기본
+* 스프링 컨테이너에서 스프링 빈을 찾는 가장 기본적인 조회 방법
+* `ac.getBean(빈이름, 타입), ac.getBean(타입)`
+* 조회 대상 스프링 빈이 없으면 예외 발생
+* 구체 타입으로 조회하면 변경시 유연성이 떨어진다
+
+```java
+@Test
+@DisplayName("빈 이름으로 조회")
+void findBeanByName() {
+    MemberService memberService = ac.getBean("memberService", MemberService.class);
+    assertThat(memberService).isInstanceOf(MemberServiceImpl.class);
+}
+
+@Test
+@DisplayName("빈 이름으로 조회X")
+void findBeanByNameX() {
+    // MemberService xxxxx = ac.getBean("xxxxx", MemberService.class);
+    Assertions.assertThrows(NoSuchBeanDefinitionException.class, () ->
+            ac.getBean("xxxxx", MemberService.class)
+    );
+}
+```
+* `Assertions.assertThrows(예외 클래스, 실행할 예외 람다식)`  
+-> 예외가 발생하면 JUint에서 정상 동작한다.
+
+### 스프링 빈 조회 - 동일한 타입이 둘 이상
+* 타입으로 조회시 같은 타입의 스프링 빈이 둘 이상이면 오류가 발생하므로 이때는 빈 이름을 지정해야 한다.
+* `ac.getBeansOfType()`을 사용하면 해당 타입의 모든 빈을 조회할 수 있다.
+
+```java
+@Test
+@DisplayName("특정 타입을 모두 조회하기")
+void findAllBeanByType() {
+    Map<String, MemberRepository> beansOfType = ac.getBeansOfType(MemberRepository.class); //Map으로 반환
+    for (String key : beansOfType.keySet()) {
+        System.out.println("key = " + key + " value = " + beansOfType.get(key));
+    }
+    System.out.println("beansOfType = " + beansOfType);
+    assertThat(beansOfType.size()).isEqualTo(2);
+}
+```
+
+### 스프링 빈 조회 - 상속 관계
+* 부모 타입으로 조회하면, 자식 타입도 함께 조회한다.
+* 그래서 최고 부모인 Object타입으로 조회하면, 모든 스프링 빈을 조회한다.
+
+## BeanFactory와 ApplicationContext
+### BeanFactory
+* 스프링 컨테이너의 최상위 인터페이스
+* 스프링 빈을 관리하고 조회하는 역할을 담당
+
+### ApplicationContext
+* BeanFactory 기능을 모두 상속받아서 제공
+* 빈 관리기능 + 편리한 부가 기능을 제공
+* ApplicationContext가 제공하는 부가기능
+	* 메시지소스를 활용한 국제화 기능
+	* 환경변수
+	* 애플리케이션 이벤트
+	* 편리한 리소스 조회 등
+
+##  스프링 빈 설정 메타 정보 - BeanDefinition
+*스프링은 어떻게 이런 다양한 설정 형식을 지원하는 것일까?*  
+-> BeanDefinition으로 추상화
+* 역할과 구현을 개념적으로 나눈 것
+* 스프링 컨테이너는 자바 코드인지, XML인지 몰라도 된다. 어느 것이든 읽어서 BeanDefinition을 만들어서 설정한다.
+* BeanDefinition을 빈 설정 메타정보라 한다.
+* 스프링 컨테이너는 이 메타정보를 기반으로 스프링 빈을 생성한다.
+	* `@Bean`, `<bean>`당 하나씩 메타 정보 생성
