--- a/_posts/2021-02-09-0208-0214.md
+++ b/_posts/2021-02-09-0208-0214.md
@@ -403,3 +403,160 @@ void findAllBeanByType() {
 * BeanDefinition을 빈 설정 메타정보라 한다.
 * 스프링 컨테이너는 이 메타정보를 기반으로 스프링 빈을 생성한다.
 	* `@Bean`, `<bean>`당 하나씩 메타 정보 생성
+
+## 0212
+# 싱글톤 컨테이너
+## 웹 애플리케이션과 싱글톤
+* 웹 애플리케이션은 보통 여러 고객이 동시에 요청을 한다.
+* 스프링 없는 순수한 DI 컨테이너인 AppConfig는 요청을 할 때 마다 객체를 새로 생성한다.
+* 고객 트래픽이 초당 100이 나오면 초당 100개 객체가 생성되고 소멸된다. 메모리 낭비가 심하다.  
+-> 싱글톤 패턴을 이용하여 객체를 딱 1개만 생성하고, 공유하도록 설계하면 된다.
+
+### 싱글톤 패턴
+* 클래스의 인스턴스가 딱 1개만 생성하는 것을 보장하는 디자인 패턴
+* 객체 인스턴스를 2개 이상 생성하지 못하도록 private 생성자를 사용해서 외부에서 임의로 new 키워드를 사용하지 못하도록 막아야 한다.
+
+```java
+public class SingletonService {
+    //1. static 영역에 객체를 딱 1개만 생성
+    private static final SingletonService instance = new SingletonService();
+    
+    //2. public으로 열어서 객체 인스턴스가 필요하면 이 static 메서드를 통해서만 조회하도록 허용
+    public static SingletonService getInstance() {
+        return instance;
+    }
+    
+    //3. 생성자를 private으로 선언해서 외부에서 new 키워드를 사용한 객체 생성을 못하게 막는다.
+    private SingletonService() {
+
+    }
+}
+```
+* 싱글톤 패턴을 적용하면 요청이 올 때마다 객체를 생성하는 것이 아니라, 이미 만들어진 객체를 공유해서 효율적으로 사용할 수 있다. 하지만 수 많은 문제점들을 가지고 있다.
+
+### 싱글톤 패턴 문제점
+* 싱글톤 패턴을 구현하는 코드 자체가 많이 들어간다.
+* 의존관계상 클라이언트가 구체 클래스에 의존 -> DIP 위반
+* 클라이언트가 구체 클래스에 의존해서 OCP 원칙을 위반할 가능성이 높다.
+* 테스트하기가 어렵다.
+* 내부 속성을 변경하거나 초기화 하기 어렵다.
+* private 생성자로 자식 클래스를 만들기 어렵다.  
+-> 결론적으로 유연성이 떨어져 안티패턴으로 불리기도 한다.
+
+## 싱글톤 컨테이너
+*스프링 컨테이너는 싱글톤 패턴의 문제점을 해결하면서, 객체 인스턴스를 싱글톤으로 관리한다. 스프링 빈이 바로 싱글톤으로 관리되는 빈*
+* 스프링 컨테이너는 싱글톤 패턴을 적용하지 않아도, 객체 인스턴스를 싱글톤으로 관리한다.
+* 스플이 컨테이너는 싱글톤 컨테이너 역할을 한다. 이렇게 싱글톤 객체를 생성하고 관리하는 기능을 싱글톤 레지스트리라고 한다.
+* 이런 기능 때문에 싱글턴 패턴의 모든 단점을 해결하면서 객체를 싱글톤으로 유지할 수 있다.
+
+### 싱글톤 방식의 주의점
+* 싱글톤 패턴이든, 스프링 같은 싱글톤 컨테이너를 사용하든, 객체 인스턴스를 하나만 생성해서 공유하는 싱글톤 방식은 여러 클라이언트가 하나의 같은 객체 인스턴스를 공유하기 때문에 상태를 유지하게 설계하면 안된다.
+* 무상태(stateless)로 설계해야 한다.
+	* 특정 클라이언트에 의존적인 필드가 있거나, 클라이언트가 값을 변경할 수 있는 필드가 있으면 안된다.
+	* 가급적 읽기만 가능해야 한다.
+	* 필드 대신에 자바에서 공유되지 않는, 지역변수, 파라미터, ThreadLocal 등을 사용해야 한다.
+* **스프링 빈의 필드에 공유 값을 설정하면 정말 큰 장애가 발생할 수 있다.**  
+-> 공유 필드는 정말 조심해야 한다. 스프링 빈은 항상 무상태로 설계하자
+
+## Configuration과 싱글톤
+*AppConfig를 보면 각각 2번 `new MemoryMemberRepository` 호출해서 서로 다른 인스턴스가 생성되어야 하는데 어떻게 싱글톤을 유지할까?*
+
+### @Configuration과 바이트코드 조작의 마법
+* 스프링 컨테이너는 싱글톤 레지스트리다. 따라서 스프링 빈이 싱글톤이 되도록 보장해주어야 한다.
+* 스프링이 자바 코드까지 조작하기는 어렵다. 그래서 스프링은 클래스의 바이트코드를 조작하는 라이브러리를 사용한다.
+* `AnnotationConfigApplicationContext`에 파라미터로 넘긴 값은 스프링 빈으로 등록된다.
+* `@Configuration`을 클래스에 붙이면 AppConfig를 상속받은 다른 클래스를 만들고, 그 클래스를 스프링 빈으로 등록하여 바이트코드를 조작하는 CGLIB 기술을 사용해서 싱글톤을 보장한다.
+* `@Bean`이 붙은 메서드마다 이미 스프링 빈이 존재하면 존재하는 빈을 반환하고, 없으면 생성해서 스프링 빈으로 등록하고 반환하는 코드가 동적으로 만들어진다.
+* `@Configuration`을 붙이지 않으면 AppConfig가 CGLIB 기술 없이 순수한 AppConfig로 스프링 빈에 등록되어 싱글톤을 보장하지 않는다.
+
+## 0213
+# 컴포넌트 스캔
+## 컴포넌트 스캔과 의존관계 자동 주입
+* 지금까지 스프링 빈을 등록할 때는 자바 코드의 `@Bean`이나 XML의 `<bean>`을 통해서 설정 정보에 직접 등록할 빈을 나열했다.
+* 설정 정보가 없어도 자동으로 스프링 빈을 등록하는 컴포넌트 스캔 기능
+* 의존관계를 자동으로 주입하는 `@Autowired` 기능
+
+```java
+@Configuration
+@ComponentScan(
+        excludeFilters = @Filter(type = FilterType.ANNOTATION, classes = Configuration.class)
+)	
+public class AutoAppConfig {
+
+}
+```
+* 컴포넌트 스캔을 사용하려면 먼저 `@ComponentScan`을 설정 정보에 붙여주면 된다.
+* 기존의 AppConfig와는 다르게 @Bean으로 등록한 클래스가 하나도 없다.
+* 컴포넌트 스캔을 사용하면 @Configuration이 붙은 설정 정보도 자동으로 등록되기 때문에, 설정정보는 스캔 대상에서 제외했다.
+* 컴포넌트 스캔은 이름 그대로 `@Component`애노테이션이 붙은 클래스를 스캔해서 스프링 빈으로 등록한다.
+
+### @ComponentScan
+* `@ComponentScan`은 `@Component`가 붙은 모든 클래스를 스프링 빈으로 등록한다.
+* 이때 스프링 빈의 기본 이름은 클래스명을 사용하되 맨 앞글자만 소문자를 사용한다.
+* 빈 이름 직접 지정  
+`@Component("memberService2")`이런식으로 이름을 부여하면 된다.
+
+### @Autowired 의존관계 자동 주입
+* 생성자에 `@Autowired`를 지정하면, 스프링 컨테이너가 자동으로 해당 스프링 빈을 찾아서 주입한다.
+* 이 때 기본 조회 전략은 타입이 같은 빈을 찾아서 주입한다.
+* 생성자에 파라미터가 많아도 다 찾아서 자동 주입한다.
+
+## 탐색 위치와 기본 스캔 대상
+### 탐색할 패키지의 시작 위치 지정
+* 모든 자바 클래스를 다 컴포넌트 스캔하면 시간이 오래 걸려서 꼭 필요한 위치부터 탐색하도록 시작 위치를 지정할 수 있다.
+```java
+@ComponentScan(
+	basePackages = "hello.core",	//이 패키지를 포함해서 하위 패키지를 모두 탐색한다.
+)
+```
+* `basePackageClasses`: 지정한 클래스의 패키지를 탐색 시작 위치로 지정한다.
+* 지정하지 않으면 `@ComponentScan`이 붙은 설정 정보 클래스의 패키지가 시작 위치가 된다.
+
+### 관례
+* 패키지 위치를 지정하지 않고, 설정 정보 클래스의 위치를 프로젝트 최상단에 두는 것. 스프링 부트도 이 방법을 제공
+* 또한 프로젝트 메인 설정 정보는 프로젝트를 대표하는 정보이기 때문에 프로젝트 시작 루트 위치에 두는 것이 좋다.
+* 스프링 부트를 사용하면 `@SpringBootApplication`를 이 프로젝트 시작 루트 위치에 두는 것이 관례  
+-> 이 안에 `@ComponentScan`이 들어있다.
+
+### 컴포넌트 스캔 기본 대상
+컴포넌트 스캔은 `@Component`뿐만 아니라 다음과 내용도 추가로 대상에 포함한다.
+* `@Controller`: 스프링 컨트롤러로 인식
+* `@Service`: 스프링 비즈니스 로직에서 사용
+* `@Repository`: 스프링 데이터 접근 계층에서 사용. 데이터 계층의 예외를 스프링 예외로 변환해준다.
+* `@Configuration`: 스프링 설정 정보에서 사용. 스플이 빈이 싱글톤을 유지하도록 추가 처리
+
+## 필터
+* `includeFilters`: 컴포넌트 스캔 대상을 추가로 지정
+* `excludeFilters`: 컴포넌트 스캔에서 제외할 대상을 지정
+
+```java
+@Configuration
+@ComponentScan(
+        includeFilters = @Filter(type = FilterType.ANNOTATION, classes = MyIncludeComponent.class),
+        excludeFilters = @Filter(type = FilterType.ANNOTATION, classes = MyExcludeComponent.class)
+)
+static class ComponentFilterAppConfig {
+
+}
+```
+* `includefilters`에 `MyIncludeComponent` 애노테이션을 추가하여 BeanA가 스프링 빈에 등록된다.
+* `excludeFilters`에 `MyExcludeComponent` 애노테이션을 추가하여 BeanB는 스프링 빈에 등록되지 않는다.
+
+> `@Component`면 충분하기 때문에, `includefilters`를 사용할 일은 거의 없다. 
+> 특히 스프링 부트는 컴포넌트 스캔을 기본으로 제공하여, 스프링의 기본 설정에 최대한 맞추어 사용하는 것을 권장
+
+## 중복 등록과 충돌
+*컴포넌트 스캔에서 같은 빈 이름을 등록하면 어떻게 될까?*  
+-> 두 가지 상황이 있다.
+1. 자동 빈 등록 vs 자동 빈 등록
+2. 수동 빈 등록 vs 자동 빈 등록
+
+### 자동 빈 등록 vs 자동 빈 등록
+* 컴포넌트 스캔에 의해 자동으로 스프링 빈이 등록되는데, 그 이름이 같은 경우 스프링은 오류를 발생시킨다.
+
+### 수동 빈 등록 vs 자동 빈 등록
+* 이 경우 수동 빈 등록이 우선권을 가진다.  
+-> 수동 빈이 자동 빈을 오버라이딩 해버린다.
+* 개발자가 의도적으로 이런 결과를 기대했다면, 자동보다는 수동이 우선권을 가지는 것이 좋지만, 현실은 여러 설정들이 꼬여서 이런 결과가 만들어진다.  
+-> 정말 잡기 어려운 버그가 만들어진다. 애매한 버그
+* 스프링 부트에서는 수동 빈 등록과 자동 빈 등록이 충돌나면 오류가 발생하도록 기본 값을 바꾸었다.
