--- a/_posts/2021-02-09-0208-0214.md
+++ b/_posts/2021-02-09-0208-0214.md
@@ -560,3 +560,195 @@ static class ComponentFilterAppConfig {
 * 개발자가 의도적으로 이런 결과를 기대했다면, 자동보다는 수동이 우선권을 가지는 것이 좋지만, 현실은 여러 설정들이 꼬여서 이런 결과가 만들어진다.  
 -> 정말 잡기 어려운 버그가 만들어진다. 애매한 버그
 * 스프링 부트에서는 수동 빈 등록과 자동 빈 등록이 충돌나면 오류가 발생하도록 기본 값을 바꾸었다.
+
+## 0214
+# 의존관계 자동 주입
+## 다양한 의존관계 주입 방법
+* 생성자 주입
+* 수정자 주입(setter 주입)
+* 필드 주입
+* 일반 메서드 주입
+
+### 생성자 주입
+* 생성자를 통해서 의존 관계를 주입받는 방법
+* 생성자 호출시점에 딱 1번만 호출되는 것이 보장
+* 불변, 필수 의존관계에서 사용
+* 생성자가 딱 1개만 있으면 @Autowired를 생략해도 자동 주입
+* @Autowired는 스프링 빈에서만 동작한다.
+
+### 수정자 주입
+* setter라 불리는 필드의 값을 변경하는 수정자 메서드를 통해서 의존관계를 주입하는 방법
+* 선택, 변경 가능성이 있는 의존관계에 사용
+* @Autowired의 기본 동작은 주입할 대상이 없으면 오류 발생. 주입할 대상이 없어도 동작하게 하려면 `@Autowired(required=false)`로 지정
+* 자바빈 프로퍼티 규약 - getter, setter메서드를 통해 값을 읽거나 수정
+
+### 필드주입
+* 필드에 바로 주입하는 방법
+* 코드가 간결하지만 외부에서 변경이 불가능해서 테스트 하기 힘들다는 치명적인 단점
+* DI 프레임워크가 없으면 아무 것도 할 수 없다.
+* 사용하지 말자
+
+### 일반 메서드 주입
+* 일반 메서드를 통해서 주입
+* 한번에 여러 필드를 주입 받을 수 있다. 잘 사용하지 않는다.
+
+## 생성자 주입을 선택하는 이유
+### 불변
+* 대부분의 의존관계 주입은 한 번 일어나면 애플리케이션 종료시점까지 의존관계를 변경할 일이 없다.
+* 수정자 주입을 사용하면, 누군가 실수로 변경할 수 있기 때문에 좋은 방법이 아니다.
+* 생성자 주입은 객체를 생성할 때 딱 한 번 호출되므로 불변하게 설계할 수 있다.
+
+### 누락
+* 프레임워크 없이 순수한 자바 코드로만 단위 테스트를 수행할 때 수정자 주입을 사용하면 의존 관계가 모두 누락하기 때문에 Null Point Exception이 발생한다.
+* 생성자 주입을 사용하면 주입 데이터를 누락했을 때 컴파일 오류가 발생한다. 그래서 어떤 값을 필수로 주입해야 하는지 바로 알 수 있다.
+
+### final 키워드
+* 생성자 주입을 사용하면 필드에 final 키워드를 사용해서 혹시라도 값이 설정되지 않는 오류를 컴파일 시점에서 막아준다.
+* 컴파일 오류는 가장 빠르고 좋은 오류이다.
+
+## 옵션 처리
+*주입할 스프링 빈이 없어도 동작해야 할 때가 있다.*
+
+**자동 주입 대상을 옵션으로 처리하는 방법**
+* `@Autowired(required = false)`: 자동  주입할 대상이 없으면 수정자 메서드 자체가 호출 안됨
+* `@Nullable`: 자동 주입할 대상이 없으면 null이 입력된다.
+* `Optional<>`: 자동 주입할 대상이 없으면 Optional.empty가 입력된다.
+
+```java
+static class TestBean {
+    @Autowired(required = false)
+    public void setNoBean1(Member member) {
+        System.out.println("member = " + member);
+    }
+
+    @Autowired
+    public void setNoBean2(@Nullable Member noBean2) {
+        System.out.println("noBean2 = " + noBean2);
+    }
+
+    @Autowired
+    public void setNoBean3(Optional<Member> noBean3) {
+        System.out.println("noBean3 = " + noBean3);
+    }
+}
+```
+* Member는 스프링 빈이 아니다.
+
+## 롬복과 최신 트랜드
+*개발을 하다 보면, 대부분 다 불변이고 생성자에 final키워드를 사용하게 된다. *
+* 롬복 라이브러리가 제공하는 `@RequiredArgsConstructor`기능을 사용하면 final이 붙은 필드를 모아서 생성자를 자동으로 만들어준다.
+* 롬복이 자바 애노테이션 프로세서라는 기능을 이용해서 컴파일 시점에 생성자 코드를 자동으로 생성해준다.
+```java
+@Component
+@RequiredArgsConstructor
+public class OrderServiceImpl implements OrderService {
+
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+}
+```
+* 최근에는 생성자를 딱 1개 두고, `@Autowired`를 생략하여 Lombok라이브러리를 더하면 사용하는 기능을 다 제공하면서, 코드는 깔끔하게 사용할 수 있다.
+
+## 조회 빈이 2개 이상일 경우
+* `@Autowired`는 타입으로 조회한다.
+* 타입으로 조회하면 선택된 빈이 2개 이상일 때 문제가 발생한다
+-> NoUniqueBeanDefinitionException
+* 하위 타입으로 지정하면 DIP를 위배하고 유연성이 떨어진다.
+* 스프링 빈을 수동 등록해서 문제를 해결할 수도 있지만, 의존 관계 자동 주입에서 해결하는 여러 방법이 있다.
+
+### Autowired 필드 명 매칭
+* `@Autowired`는 타입 매칭을 시도하고, 이 때 여러 빈이 있으면 필드 이름, 파라미터 이름을 추가 매칭한다.
+* 필드명 매칭은 먼저 타입 매칭을 시도하고 그 결과에 여러 빈이 있을 때만 추가로 동작하는 기능
+
+### Qualifier 사용
+* `@Qualifier`는 추가 구분자를 붙여주는 방법
+
+```java
+@Component
+@Qualifier("mainDiscountPolicy")
+public class RateDiscountPolicy implements DiscountPolicy {}
+
+@Autowired
+public OrderServiceImpl(MemberRepository memberRepository, @Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy) {	
+    this.memberRepository = memberRepository;
+    this.discountPolicy = discountPolicy;
+}
+```
+1. @Qualifier끼리 매칭
+2. 빈 이름 매칭
+3. NoSuchBeanDefinitionException 예외 발생
+
+### Primary 사용
+* `@Autowired`시에 여러 빈이 매칭되면 `@Primary`가 우선권을 가진다
+* `@Qualifier`의 단점은 주입 받을 때 모든 코드에 `@Qualifier`를 붙여주어야 한다는 것
+
+### 우선순위
+* `@Primary`는 기본값처럼 동작하는 것이고, `@Qualifier`는 상세하게 동작한다.
+* 스프링은 자동보다는 수동이, 넓은 범위보다는 좁은 범위의 선택권이 우선 순위가 높다.
+* 따라서  `@Qualifier`의 우선권이 높다.
+* 메인에서 `@Primary`를 사용하고 서브에서  `@Qualifier`를 지정해서 명시적으로 획득하는 방식으로 사용하면 코드를 깔끔하게 유지할 수 있다.
+
+## 애노테이션 직접 만들기
+`@Qualifier("mainDiscountPolicy")`이렇게 문자를 적으면 컴파일 시 체크가 안된다.
+어노테이션을 만들어서 문제를 해결할 수 있다.
+```java
+@Target({ElementType.FIELD, ElementType.METHOD, ElementType.PARAMETER, ElementType.TYPE, ElementType.ANNOTATION_TYPE})
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Qualifier("mainDiscountPolicy")
+public @interface MainDiscountPolicy {
+}
+
+@Component
+@MainDiscountPolicy
+public class RateDiscountPolicy implements DiscountPolicy {}
+```
+* 애노테이션에는 상속이라는 개념이 없다. 이렇게 여러 애노테이션을 모아서 사용하는 기능은 스프링이 지원해주는 기능이다.
+
+## 조회한 빈이 모두 필요할 때
+*예를 들어서 할인 서비스를 제공하는데, 클라이언트가 할인의 종류를 선택할 수 있다고 가정해보자*
+```java
+public class AllBeanTest {
+    @Test
+    void findAllBean() {
+        ApplicationContext ac = new AnnotationConfigApplicationContext(AutoAppConfig.class, DiscountService.class);	//스프링 컨테이너에 설정 파일 등록
+
+        DiscountService discountService = ac.getBean(DiscountService.class);
+        Member member = new Member(1L, "userA", Grade.VIP);
+        int discountPrice = discountService.discount(member, 10000, "fixDiscountPolicy");
+
+        assertThat(discountService).isInstanceOf(DiscountService.class);
+        assertThat(discountPrice).isEqualTo(1000);
+
+        int rateDiscountPolicy = discountService.discount(member, 20000, "rateDiscountPolicy");
+        assertThat(rateDiscountPolicy).isEqualTo(2000);
+    }
+
+    static class DiscountService {
+        private final Map<String, DiscountPolicy> policyMap;
+        private final List<DiscountPolicy> policies;
+
+
+        public DiscountService(Map<String, DiscountPolicy> policyMap, List<DiscountPolicy> policies) {
+            this.policyMap = policyMap;	
+            this.policies = policies;
+            System.out.println("policyMap = " + policyMap);
+            System.out.println("policies = " + policies);
+        }
+
+        public int discount(Member member, int price, String discountCode) {
+            DiscountPolicy discountPolicy = policyMap.get(discountCode);
+            return discountPolicy.discount(member, price);
+        }
+    }
+}
+```
+* DiscountService는 Map으로 모든 DiscountPolicy를 주입받는다.
+* `Map<String, DiscountPolicy>`: map의 키에 스프링 빈의 이름을 넣어주고, 그 값으로 DiscountPolicy 타입으로 조회한 모든 스프링 빈을 담아준다.
+
+## 자동, 수동의 올바른 실무 운영 기준
+* 스프링은 계층에 맞추어 일반적인 애플리케이션 로직을 자동으로 스캔할 수 있도록 지원할 뿐더러, 자동 빈 등록을 사용해도 OCP, DIP를 지킬 수 있기 때문에 기본적으로는 자동 빈 등록을 사용하자
+* 데이터베이스 연결이나, 공통 로그 처리처럼 업무 로직을 지원하기 위한 기술 지원 객체는 수동 빈으로 등록해서 설정 정보에 바로 나타나게 하는 것이 유지보수 하기 좋다.
+* 비즈니스 로직 중에서 다형성을 적극 활용할 때는 수동 빈 등록을 고민해보자
+	* 	조회한 빈이 모두 필요할 때 Map, List의 경우 어떤 빈들이 주입될 지 `Map<String, DiscountPolicy>`코드만 보고 한번에 쉽게 파악하기 힘들다.
+	* 이런 경우 수동으로 빈을 등록하거나 또는 자동으로하면 특정 패키지에 같이 묶어두는 것이 좋다.
