--- a/_posts/2021-02-16-0215-0221.md
+++ b/_posts/2021-02-16-0215-0221.md
@@ -37,3 +37,29 @@ category: TIL
 * 유일한 단점은 외부 라이브러리에서는 적용하지 못하는 것이다.
 
 -> @PostContruct, @PreDestroy애노테이션을 사용하자. 코드를 고칠 수 없는 외부 라이브러리를 초기화, 종료해야 하면 @Bean의 `initMethod`, `destroyMethod`를 사용하자
+
+## 0216 ~ 0219
+장염 바이러스로 인해 휴식
+
+## 0220 ~ 0221
+몸이 아파서 기존에 진행해야 할 프로젝트의 마감을 지키기 위해 주말 시간동안 프로젝트를 진행하였다.
+* 로컬에서 진행하던 프로젝트를 상용 서버로 올려서 테스트를 했다.
+* 로컬에서는 잘 작동하던 것들도 상용에서는 안되는 것도 존재 한다는 것을 알게 되었다.
+* 대표적으로 쿠키의 경우에는 어디에 있는 쿠키를 삭제할 것인지 URL을 지정해줘야만 작동한다는 것을 알게 되었다.
+
+``` javascript
+logoutMethod() {
+	const cookie = Cookie.get();
+       jsCookie.do
+		for(let c in cookie) {
+			if(c != 'savedEmail' || c != 'notToday'){
+				remove(c,{domain:'도메인명'});	
+			}
+		}
+		this.checkLogin();
+	}
+```
+* 위와 같이 도메인명을 지정해줘야 쿠키가 제대로 삭제된 것을 확인했다.
+* 예상에 없던 일로 많은 것이 미뤄지게 되었는데 그만큼 더 열심히 해야겠다고 다짐했다.
+
+
