--- a/_posts/2021-02-25-0222-0228.md
+++ b/_posts/2021-02-25-0222-0228.md
@@ -25,3 +25,23 @@ category: TIL
 -> 깃의 상태를 확인해준다.
 * `git config --global alias.별명 원래명령어`  
 -> 원래 명령어를 별명으로 사용할 수 있도록 해준다.
+
+## 0223
+# Git Workflow
+### working directory
+* 작업하고 있는 디렉토리
+* untracked과 tracked로 나뉘어 진다.
+* 깃이 이미 알고 있는 tracking하고 있는 파일이라면 tracked 카테고리로 가게 된다.
+* 새로 만들어진 파일이거나 기존에 존재하던 프로젝트에서 깃을 초기화하게 되면 깃이 파일에 대한 정보가 없으므로 아기 tracking되지 않은 파일들을 untracked 카테고리로 가게 된다.
+* tracked 카테고리에서 이전 버전과 비교해서 수정되었으면 modified, 수정되지 않았으면 unmodified로 나뉘는데 modified파일만 staging area로 이동할 수 있다.
+
+### staging area
+* 어느정도 작업하다가 버전 히스토리에 저장할 준비가 되어있는 파일들을 옮겨놓는 장소
+* commit 명령어를 이용하여 히스토리에 저장할 수 있다.
+
+### .git directory
+* 버전의 히스토리를 가지고 있는 깃 리포지토리
+* checkout 명령어를 통해 원하는 버전으로 돌아갈 수 있다.
+
+### remote
+* 나의 로컬이 아닌 깃허브 같은 서버에 push, pull을 통해 저장하고 업로드 받을 수 있는 장소
