--- a/_posts/2021-02-25-0222-0228.md
+++ b/_posts/2021-02-25-0222-0228.md
@@ -45,3 +45,42 @@ category: TIL
 
 ### remote
 * 나의 로컬이 아닌 깃허브 같은 서버에 push, pull을 통해 저장하고 업로드 받을 수 있는 장소
+
+## 0224
+# Git 기본 명령어
+### git add
+* `git add 파일명`  
+-> 파일을 트래킹하여 staging area로 옮겨준다.
+* 트래킹중인 파일을 수정하면 working directory에서 modified상태로 변경된다.
+* `git add *`  
+-> working directory에 있는 모든 파일을 staging area로 옮겨준다.
+
+### git rm
+* `git rm --cached 파일명`  
+-> staging area에 있는 파일을 다시 working directory로 옮겨준다.
+
+### gitignore
+* 트래킹하고싶지 않은 파일들을 .gitignore파일에 추가하여 트래킹하지 못하도록 설정할 수 있다.
+
+### git status 옵션
+* `git status -s`  
+-> 깃의 상태를 간단하게 보여준다.
+
+### git diff
+* `git diff`  
+-> working directory에서 이전 버전과의 변경 사항을 보여준다.
+* `git diff --staged`  
+-> staging area에서 이전 버전과의 변경 사항을 보여준다.
+* `git difftool, git difftool --staged`  
+-> 변경 사항을 vscode에서 사용할 수 있도록 설정해두었다
+
+### git commit
+* staging area에 있는 변경사항을 깃 리포지토리로 옮겨주는 역할을 한다.
+* `git commit -m "작성할 메시지"`  
+-> 메시지와 함께 커밋
+* `git commit -am "작성할 메시지"`  
+-> staging area뿐만 아니라 working directory에 있는 모든 변경 사항을 메시지와 함께 커밋
+* `git log`  
+-> 깃 커밋 내용 확인
+
+**하나의 기능을 단위로 하여 의미있는 이름으로 커밋을 하자**
